tests/errors/E005.zen
int main() {
    return 0 + true;        /// Error 005: Type mismatch in binary operation
}